<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
        
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/tv1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hello" />
	
	    <TextView
	        android:id="@+id/tv2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultTV" />
	
	    <TextView
	        android:id="@+id/tv3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultTV" />
	
	    <TextView
	        android:id="@+id/tv4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultTV" />
	
	    <TextView
	        android:id="@+id/tv5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultTV" />
	
	    <TextView
	        android:id="@+id/tv6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultTV" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button1" />
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button2" />
	
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button3" />
	
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button4" />
	    
	    <Button
	        android:id="@+id/button5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button5" />
		<Button
	        android:id="@+id/button6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button6" />
		<Button
	        android:id="@+id/button7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Button7" />

		<Button
		    android:id="@+id/button8"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/Button8" />
	    
	</LinearLayout>
</ScrollView>