<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollViewLeft"
        android:layout_width="0dip"
        android:layout_height="match_parent" 
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/ButtonController1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button1" />

            <Button
                android:id="@+id/ButtonController2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button3" />

            <Button
                android:id="@+id/ButtonController3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button2" />

            <Button
                android:id="@+id/ButtonController4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button4" />

            <Button
                android:id="@+id/ButtonController5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button4" />

            <Button
                android:id="@+id/ButtonController6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button4" />

            <Button
                android:id="@+id/ButtonController7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button4" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollViewRight"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TVController1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Controller" />

            <TextView
                android:id="@+id/TVController2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Controller" />

            <TextView
                android:id="@+id/TVController3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Controller" />

            <TextView
                android:id="@+id/TVController4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Controller" />

            <TextView
                android:id="@+id/TVController5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Controller" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>